--- a/package.json
+++ b/package.json
@@ -41,7 +41,11 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.22.11",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.22.14",
+    "babel-jest": "^29.6.4",
+    "jest": "^27.5.1",
     "jest-fetch-mock": "^3.0.3"
   }
 }
