--- a/package.json
+++ b/package.json
@@ -19,9 +19,24 @@
   "scripts": {
     "start": "react-scripts start --port 3000",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
+  
+  "jest": {
+    "testMatch": [
+      "<rootDir>/tests/**/*.test.js"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "<rootDir>/src/fileMock.js"
+    },
+    "testEnvironment": "jsdom"
+  },
+
+  "babel": {
+    "presets": ["@babel/preset-env", "@babel/preset-react"]
+  },
+  
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -47,6 +62,7 @@
     "@babel/preset-react": "^7.22.5",
     "babel-jest": "^29.6.4",
     "jest": "^27.5.1",
+    "jest-css-modules": "^2.1.0",
     "jest-fetch-mock": "^3.0.3"
   }
 }
